# rust-koditool

./: Cargo.toml  README.md  config.yml  show_mapping.yml
.github/workflows/: build.yaml
src/: kodi_helper.rs  main.rs  random_ep.rs  tvmode.rs
