[package]
name = "rust-koditool"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jsonrpc = "0.16.0"
reqwest = "0.11"
serde = "1.0"
serde_json = "1.0"
serde_yaml = "0.8"
tokio = { version = "1", features = ["full"] }
yaml-rust = "0.4"
base64 = "0.13"
